ShapeDetection: use ImageBitmapSource as input and support ImageData

This CL :

- s/CanvasImageSource/ImageBitmapSource/ in the idl following
https://wicg.github.io/shape-detection-api/#face-detection-api and
https://wicg.github.io/shape-detection-api/#barcode-detection-api

 CanvasImageSource [1] is almost a subset of ImageBitmapSource [2]
(the former can be a CSSImageValue, but we don't care much
about it for this Spec), so this CL is small in that sense.

- Adds support for ImageData as a source for detect()ion,
and adds a LayoutTest for it.

[1] https://cs.chromium.org/chromium/src/third_party/WebKit/Source/modules/canvas2d/CanvasRenderingContext2D.idl?q=file:%5C.idl+CanvasImagesource&sq=package:chromium&l=33&dr=C
[2] https://cs.chromium.org/chromium/src/third_party/WebKit/Source/core/imagebitmap/ImageBitmapFactories.idl?type=cs&q=file:%5C.idl+Imagebitmapsource&sq=package:chromium&l=38

BUG=670975

Review-Url: https://codereview.chromium.org/2550413005
Cr-Commit-Position: refs/heads/master@{#438725}