third_party/WebKit/Source/modules/shapedetection/ShapeDetector.h
@@ -8,6 +8,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "bindings/core/v8/ScriptPromise.h"
 #include "bindings/core/v8/ScriptPromiseResolver.h"
+#include "core/imagebitmap/ImageBitmapFactories.h"
 #include "modules/ModulesExport.h"
 #include "modules/canvas2d/CanvasRenderingContext2D.h"
 
@@ -23,10 +24,11 @@ class MODULES_EXPORT ShapeDetector
   explicit ShapeDetector(LocalFrame&);
   virtual ~ShapeDetector() = default;
 
-  ScriptPromise detect(ScriptState*, const CanvasImageSourceUnion&);
+  ScriptPromise detect(ScriptState*, const ImageBitmapSourceUnion&);
   DEFINE_INLINE_VIRTUAL_TRACE() {}
 
  private:
+  ScriptPromise detectShapesOnImageData(ScriptPromiseResolver*, ImageData*);
   ScriptPromise detectShapesOnImageElement(ScriptPromiseResolver*,
                                            const HTMLImageElement*);
 
